# finance-research-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.hermes/prompts/: v1-radar.md
data/: a_share_universe.csv  a_share_universe.example.csv  watchlist.example.csv
docs/: current-status.md  model-and-tooling-architecture.md  mvp-roadmap.md  product-spec-v0.md
docs/superpowers/specs/: 2026-06-30-a-share-research-agent-design.md
prompts/: investment_research_agent.md
src/finance_research_lab/: __init__.py  a_share_universe.py  agent_models.py  agent_report.py  cli.py  models.py  news_fetcher.py  news_trace.py  radar_report.py  report.py  research_agent.py  research_planner.py  research_report_schema.py  tools.py  workflow.py
src/finance_research_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/finance_research_lab/agents/: __init__.py  context.py  tools.py
src/finance_research_lab/llm/: __init__.py  base.py  chat_completions_client.py  mock_client.py
tests/: test_a_share_candidates.py  test_a_share_universe_sync.py  test_cli.py  test_llm_agent.py  test_llm_and_tools_architecture.py  test_news_fetcher.py  test_news_trace.py  test_radar.py  test_report.py  test_research_planner.py  test_research_report_schema.py  test_workflow.py
